# troop-of-olde-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  dev.tmux.example  main.cpp  run.bat  run.sh  todo.md
assets/models/: cube.glb  humanoid.glb  quad.glb  sample_world.glb  sword.glb
cmake/: PlatformDeps.cmake
src/: client.cpp  logger.cpp  main.cpp  server.cpp  test_client.cpp
src/client/: animation.hpp  camera.hpp  components.hpp  disconnect.hpp  entities.hpp  fonts.hpp  input.hpp  input_buffer.hpp  input_handler.hpp  models.hpp  movement.hpp  network.cpp  network.hpp  packet_handler.hpp  register.hpp  render.hpp  spawn.hpp  systems.hpp
src/client/components/: physics.hpp  player.hpp
src/client/systems/: movement_networking_system.cpp  movement_networking_system.hpp  movement_system.cpp  movement_system.hpp  movement_systems.hpp  render_system.cpp  render_system.hpp  render_systems.hpp  spawn_systems.hpp
src/client_tests/: test_input_buffer.cpp
src/server/: animation.hpp  character.hpp  components.hpp  disconnect.hpp  entities.hpp  login.hpp  mesh_loader.cpp  mesh_loader.hpp  movement.hpp  network.cpp  network.hpp  packet_handler.hpp
src/server/components/: networking.hpp
src/server/systems/: login_systems.hpp  movement_networking_system.cpp  movement_networking_system.hpp  movement_system.cpp  movement_system.hpp  movement_systems.hpp
src/shared/: animation.hpp  animation_components.hpp  components.hpp  const.hpp  movement.hpp  network_components.hpp  packets.hpp  pch-networking.cpp  pch-networking.hpp  pch.hpp  physics.hpp  raylib-const.hpp  raylib-util.hpp  register.hpp  serialize.hpp  util.cpp  util.hpp
src/shared/components/: inputs.hpp  movement.hpp  names.hpp  network.hpp  packets.hpp  physics.hpp  ticks.hpp
src/shared/helpers/: movement.hpp
src/shared/serialize/: helpers.hpp  serialize.hpp  serialize_input_packet.hpp  serialize_login.hpp  serialize_movement.hpp  serialize_names.hpp  serialize_physics.hpp  serialize_vector3.hpp
test/: helpers.hpp
test/client/: test_input.cpp  test_input_buffer.cpp  test_movement.cpp
test/server/: test_movement.cpp
